k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-services-service
  namespace: ai-services
  labels:
    app: ai-services
spec:
  selector:
    app: ai-services
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http-web
  type: ClusterIP
